--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -56,6 +56,8 @@
 </head>
 <body>
 <div>
+
+
     <div class="flex-container">
         <div class="flex-item-1 header-item-left">
             <span>e-Services-2</span>
@@ -67,7 +69,7 @@
                 </span>
         </div>
     </div>
-    <div class="grid-container">
+    <div class="grid-container" style="border-radius: 20px 20px 0 0;">
         <div class="grid-header">&nbsp;</div>
         <div class="flex-container grid-nav-container">
             <div class="flex-item-1 nav-title-left">
@@ -98,7 +100,7 @@
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
                     <!--<input id="loginId" name="user.userId" value=""/>-->
-                    <input id="loginId" name="user.userId" value="SCUSER08"/>
+                    <input id="loginId" name="user.userId" value="demo001"/>
                     <!--SCUSER08-->
                 </div>
             </div>
