--- a/src/main/webapp/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css
+++ b/src/main/webapp/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css
@@ -73,23 +73,25 @@
 .jsgrid-header-row .jsgrid-header-sort {
     background: #c4e2ff;
 }
-
-.jsgrid-header-sort:before {
+.jsgrid-header-sort div {
+    display: inline-block;
+}
+.jsgrid-header-sort div:after {
     content: " ";
     display: block;
-    float: left;
+    float: right;
     width: 0;
     height: 0;
     border-style: solid;
 }
 
-.jsgrid-header-sort-asc:before {
+.jsgrid-header-sort-asc div:after {
     border-width: 0 5px 5px 5px;
     /* border-color: transparent transparent #009a67 transparent; */
     border-color: transparent transparent cyan transparent;
 }
 
-.jsgrid-header-sort-desc:before {
+.jsgrid-header-sort-desc div:after {
     /* border-width: 5px 5px 0 5px; */
     /* border-color: #009a67 transparent transparent transparent; */
 
@@ -135,7 +137,7 @@
 .jsgrid-header-row > .jsgrid-header-cell {
     background: #82a579;
     color: white;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
 }
 
 .jsgrid-filter-row > .jsgrid-cell {
