ADD: system holiday

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -282,7 +282,7 @@
                                                 <a th:href="@{/applicationFeeEnquiry.do}" class="func-bullet">Application Fee Enquiry</a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">System Holiday View</a>
+                                                <a th:href="@{/systemHoliday.do}" class="func-bullet">System Holiday View</a>
                                             </li>
                                             <li class="func-child">
                                                 <a class="func-bullet">Schedule Job View</a>
