--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -85,7 +85,7 @@
 
             </div>
 
-            <div class="grid-container " style="height: 600px;">
+            <div class="grid-container " style="height: 600px; overflow-y: scroll;">
                 <div layout:fragment="content">
                     <p>Page content goes here</p>
                 </div>
