--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -298,7 +298,7 @@
                                                 <a class="func-bullet">Important Announcement</a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Surge Control</a>
+                                                <a th:href="@{/surgeControl.do}" class="func-bullet">Surge Control</a>
                                             </li>
                                             <li class="func-child">
                                                 <a th:href="@{/accessControl.do}" class="func-bullet">Access Control</a>
