--- a/src/main/webapp/css/system-holiday.css
+++ b/src/main/webapp/css/system-holiday.css
@@ -1,6 +1,6 @@
 #holidayDate {
-    max-height: 90%;
-    overflow-y: scroll;
+    /*max-height: 90%;*/
+    /*overflow-y: scroll;*/
 }
 
 .holiday-date-header, .holiday-date-row {
