--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -54,6 +54,12 @@
     text-decoration: underline;
 }
 
+.data-grid-footer {
+    width: 100%;
+    height: 34px;
+    background-color: #79a775;
+}
+
 .ButtonStyle {
     border-bottom: 1px solid #152C54;
     border-top: 1px solid #FFE1B3;
