--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -6,7 +6,7 @@
 
     <script type="text/javascript" th:inline="javascript" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}">
         /*<![CDATA[*/
-        window.location="/adminfunc/AUTH/login-fail.html";
+        window.location="/adminfunc/AUTH/login-fail.do";
         /*]]>*/
     </script>
 
