--- a/src/main/resources/templates/Auth/change-pwd-fail.html
+++ b/src/main/resources/templates/Auth/change-pwd-fail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8"></meta>
@@ -48,7 +48,7 @@
                 </span>
         </div>
     </div>
-    <div class="grid-container">
+    <div class="grid-container round-border">
         <div class="grid-header">&nbsp;</div>
         <div class="flex-container grid-nav-container">
             <div class="flex-item-1 nav-title-left">
