--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -69,7 +69,7 @@
                 </span>
         </div>
     </div>
-    <div class="grid-container" style="border-radius: 20px 20px 0 0;">
+    <div class="grid-container round-border" >
         <div class="grid-header">&nbsp;</div>
         <div class="flex-container grid-nav-container">
             <div class="flex-item-1 nav-title-left">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
                     <!--<input id="loginId" name="user.userId" value=""/>-->
-                    <input id="loginId" name="user.userId" value="SCUSER08"/>
+                    <input id="loginId" name="user.userId" value="demo001"/>
                     <!--SCUSER08-->
                     <!--demo001-->
                 </div>
