--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -47,7 +47,7 @@
                 </span>
         </div>
     </div>
-    <div class="grid-container">
+    <div class="grid-container round-border">
         <div class="grid-header">&nbsp;</div>
         <div class="flex-container grid-nav-container">
             <div class="flex-item-1 nav-title-left">
